updated the layout and descriptions

--- a/bigram.ipynb
+++ b/bigram.ipynb
@@ -9,19 +9,19 @@
     "\n",
     "We will build an autoregressive bigram language model for predicting the next token in a sequence of text. The shakespeare_char dataset will be used for this demonstration, which can be found in the data folder.  \n",
     "\n",
-    "Bigram is a probabilistic model. It uses the previous token in the sequence to determine the probabilities of the next tokens occuring. Then the next token is sampled using the next tokens probabilities.  \n",
+    "Bigram is a probabilistic model. It uses the previous token in the sequence to determine the probabilities of the next tokens occuring. Then the next token is sampled using the next tokens probabilities. For further explanation of the bigram model, see Andrej Karpathy's video: [Video: bigram language model, loss, generation](https://www.youtube.com/watch?v=kCc8FmEb1nY&t=1331s).\n",
     "\n",
     "The n-gram models are a more general case of the bigram model. They differ from bigram in that they use the last n-1 tokens in the sequence instead of just the last word. This enables them to see further back in the sentence to make their prediction. \n",
     "\n",
     "### References:\n",
     "- [GPT colab notebook](https://colab.research.google.com/drive/1JMLa53HDuA-i7ZBmqV7ZnA3c_fvtXnx-?usp=sharing)\n",
-    "- [Video: simplest baseline: bigram language model, loss, generation](https://www.youtube.com/watch?v=kCc8FmEb1nY&t=1331s)\n",
+    "- [Video: bigram language model, loss, generation](https://www.youtube.com/watch?v=kCc8FmEb1nY&t=1331s)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,12 +34,22 @@
     "import flax.linen as nn\n",
     "import optax\n",
     "from jax import value_and_grad\n",
-    "from functools import partial"
+    "from functools import partial\n",
+    "\n",
+    "from helper_funcs import get_batch, generate, masked_fill, loss_fn"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data Preparation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -136,42 +146,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "rng_key = jax.random.PRNGKey(128)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "batch_size = 4 # how many independent sequences will we process in parallel?\n",
-    "block_size = 8 # what is the maximum context length for predictions?\n",
+    "rng_key = jax.random.PRNGKey(128)\n",
     "\n",
-    "def get_batch(data, rng_key, batch_size, block_size):\n",
-    "    \"\"\"\n",
-    "    Extracts a random batch of input and target data\n",
-    "    Args:\n",
-    "        data: An array of all the data's token ID's.\n",
-    "        rng_key: Random number generator key.\n",
-    "        batch_size: Number of parallel batches.\n",
-    "        block_size: Maximum time length for the token sequence.\n",
-    "    Returns:\n",
-    "        Input token ID's and target token ID's.\n",
-    "    \"\"\"\n",
-    "    ix = random.randint(key=rng_key, shape=(batch_size, ), minval=0, maxval=len(data) - block_size)\n",
-    "    x = jnp.stack([data[i:i+block_size] for i in ix])\n",
-    "    y = jnp.stack([data[i+1:i+block_size+1] for i in ix])\n",
-    "    return x, y"
+    "batch_size = 4 # how many independent sequences will we process in parallel?\n",
+    "block_size = 8 # what is the maximum context length for predictions?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -307,53 +294,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 53,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "@partial(jax.jit, static_argnames=['vocab_size', 'batch_size', 'max_new_tokens'])\n",
-    "def generate(variables, index_seq, rng_key, vocab_size, batch_size, max_new_tokens):\n",
-    "    \"\"\"\n",
-    "    Generates max_new_tokens number of new tokens, \n",
-    "    given the starting sequence of tokens index_seq \n",
-    "    Args:\n",
-    "        variables: Bigram models parameters.\n",
-    "        index_seq: Array of token indices with shape (B, T), \n",
-    "            where B is the batch size and T is the time steps.\n",
-    "        rng_key: Random number generator key.\n",
-    "        vocab_size: Number of independent tokens in the vocabulary.\n",
-    "        max_new_tokens: Maximum number of new tokens to generate\n",
-    "    Returns:\n",
-    "        An array of generated indices\n",
-    "    \"\"\"\n",
-    "    # Batched sampling function\n",
-    "    batched_choice = jax.vmap(jax.random.choice)\n",
-    "    \n",
-    "    for _ in range(max_new_tokens):\n",
-    "        logits = model.apply(variables, index_seq)\n",
-    "        # Focus only on the last time step\n",
-    "        # Shape changes from (B, T, C) -> (B, C)\n",
-    "        logits = logits[:, -1, :]\n",
-    "        # Convert to probabilities using softmax\n",
-    "        probs = jax.nn.softmax(logits, axis=-1)\n",
-    "        # Sample a token index using probs\n",
-    "        rng_key, subkey = jax.random.split(rng_key)\n",
-    "        batched_key = subkey.reshape(1, -1)\n",
-    "        batched_key = jnp.repeat(batched_key, batch_size, axis=0)\n",
-    "        a = jnp.arange(vocab_size).reshape(1, -1)\n",
-    "        a = jnp.repeat(a, batch_size, axis=0)\n",
-    "        next_indexes = batched_choice(batched_key, a, p=probs)\n",
-    "        next_indexes = next_indexes.reshape(batch_size, -1)\n",
-    "        # Append the sampled index to the running sequence\n",
-    "        index_seq = jnp.concatenate([index_seq, next_indexes], axis=1)\n",
-    "    return index_seq\n",
-    "\n"
+    "## Text Generation Pre-Training"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -371,42 +321,23 @@
     "index_seq = jnp.zeros(shape=(1,1), dtype=jnp.uint16)\n",
     "max_new_tokens = 100\n",
     "\n",
-    "generated_indices = generate(variables, index_seq, rng_key, vocab_size, 1, max_new_tokens)\n",
+    "generated_indices = generate(variables, model.apply, index_seq, rng_key, vocab_size, 1, block_size, max_new_tokens)\n",
     "generated_indices = list(np.array(generated_indices[0]))\n",
     "print(\"Generated text: \")\n",
     "print(decode(generated_indices))"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 55,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "def loss_fn(variables, index_seq, labels):\n",
-    "    \"\"\"\n",
-    "    Calculates the cross entropy loss of \n",
-    "    all batches and time steps, \n",
-    "    then returns the mean.\n",
-    "    Args:\n",
-    "        variables: Language model parameters.\n",
-    "        index_seq: Array of token indices with shape (B, T), \n",
-    "            where B is the batch size and T is the time steps.\n",
-    "        labels: Indexes of the next token in the sequence.\n",
-    "    Returns:\n",
-    "        Cross entropy loss\n",
-    "    \"\"\"\n",
-    "    logits = model.apply(variables, index_seq)\n",
-    "\n",
-    "    loss = optax.softmax_cross_entropy_with_integer_labels(logits, labels)\n",
-    "    # Average loss across all batches and time steps\n",
-    "    loss = loss.mean()\n",
-    "    return loss"
+    "## Train the Model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,113 +347,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 0, Loss: 4.1947\n",
-      "Epoch: 1, Loss: 4.1744\n",
-      "Epoch: 2, Loss: 4.1583\n",
-      "Epoch: 3, Loss: 4.1578\n",
-      "Epoch: 4, Loss: 4.1329\n",
-      "Epoch: 5, Loss: 4.1435\n",
-      "Epoch: 6, Loss: 4.1164\n",
-      "Epoch: 7, Loss: 4.1246\n",
-      "Epoch: 8, Loss: 4.1056\n",
-      "Epoch: 9, Loss: 4.0930\n",
-      "Epoch: 10, Loss: 4.0616\n",
-      "Epoch: 11, Loss: 4.0610\n",
-      "Epoch: 12, Loss: 4.0631\n",
-      "Epoch: 13, Loss: 4.0392\n",
-      "Epoch: 14, Loss: 4.0296\n",
-      "Epoch: 15, Loss: 4.0367\n",
-      "Epoch: 16, Loss: 4.0135\n",
-      "Epoch: 17, Loss: 3.9982\n",
-      "Epoch: 18, Loss: 3.9788\n",
-      "Epoch: 19, Loss: 3.9806\n",
-      "Epoch: 20, Loss: 3.9684\n",
-      "Epoch: 21, Loss: 3.9566\n",
-      "Epoch: 22, Loss: 3.9539\n",
-      "Epoch: 23, Loss: 3.9224\n",
-      "Epoch: 24, Loss: 3.9471\n",
-      "Epoch: 25, Loss: 3.9120\n",
-      "Epoch: 26, Loss: 3.9014\n",
-      "Epoch: 27, Loss: 3.9146\n",
-      "Epoch: 28, Loss: 3.8944\n",
-      "Epoch: 29, Loss: 3.8898\n",
-      "Epoch: 30, Loss: 3.8620\n",
-      "Epoch: 31, Loss: 3.8377\n",
-      "Epoch: 32, Loss: 3.8293\n",
-      "Epoch: 33, Loss: 3.8346\n",
-      "Epoch: 34, Loss: 3.8517\n",
-      "Epoch: 35, Loss: 3.8439\n",
-      "Epoch: 36, Loss: 3.8121\n",
-      "Epoch: 37, Loss: 3.7939\n",
-      "Epoch: 38, Loss: 3.8129\n",
-      "Epoch: 39, Loss: 3.7650\n",
-      "Epoch: 40, Loss: 3.7597\n",
-      "Epoch: 41, Loss: 3.7425\n",
-      "Epoch: 42, Loss: 3.7499\n",
-      "Epoch: 43, Loss: 3.7276\n",
-      "Epoch: 44, Loss: 3.7341\n",
-      "Epoch: 45, Loss: 3.7159\n",
-      "Epoch: 46, Loss: 3.7060\n",
-      "Epoch: 47, Loss: 3.7091\n",
-      "Epoch: 48, Loss: 3.6972\n",
-      "Epoch: 49, Loss: 3.6868\n",
-      "Epoch: 50, Loss: 3.6809\n",
-      "Epoch: 51, Loss: 3.7422\n",
-      "Epoch: 52, Loss: 3.6910\n",
-      "Epoch: 53, Loss: 3.6594\n",
-      "Epoch: 54, Loss: 3.6731\n",
-      "Epoch: 55, Loss: 3.6398\n",
-      "Epoch: 56, Loss: 3.6488\n",
-      "Epoch: 57, Loss: 3.6138\n",
-      "Epoch: 58, Loss: 3.6323\n",
-      "Epoch: 59, Loss: 3.6109\n",
-      "Epoch: 60, Loss: 3.6139\n",
-      "Epoch: 61, Loss: 3.6089\n",
-      "Epoch: 62, Loss: 3.6096\n",
-      "Epoch: 63, Loss: 3.5468\n",
-      "Epoch: 64, Loss: 3.5750\n",
-      "Epoch: 65, Loss: 3.5738\n",
-      "Epoch: 66, Loss: 3.5420\n",
-      "Epoch: 67, Loss: 3.5346\n",
-      "Epoch: 68, Loss: 3.5595\n",
-      "Epoch: 69, Loss: 3.5812\n",
-      "Epoch: 70, Loss: 3.5100\n",
-      "Epoch: 71, Loss: 3.5106\n",
-      "Epoch: 72, Loss: 3.5095\n",
-      "Epoch: 73, Loss: 3.4853\n",
-      "Epoch: 74, Loss: 3.4559\n",
-      "Epoch: 75, Loss: 3.4283\n",
-      "Epoch: 76, Loss: 3.4612\n",
-      "Epoch: 77, Loss: 3.4393\n",
-      "Epoch: 78, Loss: 3.4271\n",
-      "Epoch: 79, Loss: 3.4236\n",
-      "Epoch: 80, Loss: 3.4602\n",
-      "Epoch: 81, Loss: 3.4703\n",
-      "Epoch: 82, Loss: 3.4098\n",
-      "Epoch: 83, Loss: 3.4546\n",
-      "Epoch: 84, Loss: 3.3625\n",
-      "Epoch: 85, Loss: 3.3767\n",
-      "Epoch: 86, Loss: 3.3465\n",
-      "Epoch: 87, Loss: 3.3925\n",
-      "Epoch: 88, Loss: 3.4200\n",
-      "Epoch: 89, Loss: 3.3687\n",
-      "Epoch: 90, Loss: 3.3598\n",
-      "Epoch: 91, Loss: 3.3612\n",
-      "Epoch: 92, Loss: 3.3606\n",
-      "Epoch: 93, Loss: 3.3694\n",
-      "Epoch: 94, Loss: 3.4284\n",
-      "Epoch: 95, Loss: 3.3324\n",
-      "Epoch: 96, Loss: 3.2846\n",
-      "Epoch: 97, Loss: 3.3172\n",
-      "Epoch: 98, Loss: 3.2938\n",
-      "Epoch: 99, Loss: 3.3010\n"
+      "Epoch: 0, Loss: 4.1996\n",
+      "Epoch: 1, Loss: 4.1725\n",
+      "Epoch: 2, Loss: 4.1578\n",
+      "Epoch: 3, Loss: 4.1523\n",
+      "Epoch: 4, Loss: 4.1439\n",
+      "Epoch: 5, Loss: 4.1430\n",
+      "Epoch: 6, Loss: 4.1282\n",
+      "Epoch: 7, Loss: 4.1220\n",
+      "Epoch: 8, Loss: 4.1064\n",
+      "Epoch: 9, Loss: 4.1081\n",
+      "Epoch: 10, Loss: 4.0991\n",
+      "Epoch: 11, Loss: 4.0791\n",
+      "Epoch: 12, Loss: 4.0501\n",
+      "Epoch: 13, Loss: 4.0383\n",
+      "Epoch: 14, Loss: 4.0466\n",
+      "Epoch: 15, Loss: 4.0380\n",
+      "Epoch: 16, Loss: 4.0254\n",
+      "Epoch: 17, Loss: 4.0144\n",
+      "Epoch: 18, Loss: 3.9974\n",
+      "Epoch: 19, Loss: 3.9868\n",
+      "Epoch: 20, Loss: 3.9660\n",
+      "Epoch: 21, Loss: 3.9618\n",
+      "Epoch: 22, Loss: 3.9420\n",
+      "Epoch: 23, Loss: 3.9424\n",
+      "Epoch: 24, Loss: 3.9269\n",
+      "Epoch: 25, Loss: 3.9313\n",
+      "Epoch: 26, Loss: 3.9342\n",
+      "Epoch: 27, Loss: 3.9111\n",
+      "Epoch: 28, Loss: 3.8979\n",
+      "Epoch: 29, Loss: 3.8893\n",
+      "Epoch: 30, Loss: 3.8613\n",
+      "Epoch: 31, Loss: 3.8779\n",
+      "Epoch: 32, Loss: 3.8776\n",
+      "Epoch: 33, Loss: 3.8578\n",
+      "Epoch: 34, Loss: 3.8241\n",
+      "Epoch: 35, Loss: 3.8421\n",
+      "Epoch: 36, Loss: 3.7989\n",
+      "Epoch: 37, Loss: 3.7984\n",
+      "Epoch: 38, Loss: 3.7727\n",
+      "Epoch: 39, Loss: 3.8095\n",
+      "Epoch: 40, Loss: 3.7699\n",
+      "Epoch: 41, Loss: 3.7758\n",
+      "Epoch: 42, Loss: 3.7518\n",
+      "Epoch: 43, Loss: 3.7608\n",
+      "Epoch: 44, Loss: 3.7639\n",
+      "Epoch: 45, Loss: 3.7967\n",
+      "Epoch: 46, Loss: 3.7790\n",
+      "Epoch: 47, Loss: 3.6979\n",
+      "Epoch: 48, Loss: 3.6790\n",
+      "Epoch: 49, Loss: 3.7294\n",
+      "Epoch: 50, Loss: 3.6593\n",
+      "Epoch: 51, Loss: 3.6845\n",
+      "Epoch: 52, Loss: 3.6597\n",
+      "Epoch: 53, Loss: 3.6408\n",
+      "Epoch: 54, Loss: 3.6358\n",
+      "Epoch: 55, Loss: 3.6476\n",
+      "Epoch: 56, Loss: 3.6428\n",
+      "Epoch: 57, Loss: 3.6153\n",
+      "Epoch: 58, Loss: 3.6264\n",
+      "Epoch: 59, Loss: 3.6352\n",
+      "Epoch: 60, Loss: 3.6024\n",
+      "Epoch: 61, Loss: 3.5696\n",
+      "Epoch: 62, Loss: 3.5952\n",
+      "Epoch: 63, Loss: 3.5828\n",
+      "Epoch: 64, Loss: 3.6007\n",
+      "Epoch: 65, Loss: 3.5406\n",
+      "Epoch: 66, Loss: 3.5791\n",
+      "Epoch: 67, Loss: 3.5299\n",
+      "Epoch: 68, Loss: 3.5420\n",
+      "Epoch: 69, Loss: 3.5148\n",
+      "Epoch: 70, Loss: 3.4850\n",
+      "Epoch: 71, Loss: 3.5083\n",
+      "Epoch: 72, Loss: 3.5028\n",
+      "Epoch: 73, Loss: 3.4495\n",
+      "Epoch: 74, Loss: 3.5013\n",
+      "Epoch: 75, Loss: 3.4860\n",
+      "Epoch: 76, Loss: 3.4396\n",
+      "Epoch: 77, Loss: 3.5065\n",
+      "Epoch: 78, Loss: 3.4448\n",
+      "Epoch: 79, Loss: 3.4913\n",
+      "Epoch: 80, Loss: 3.4139\n",
+      "Epoch: 81, Loss: 3.4124\n",
+      "Epoch: 82, Loss: 3.4104\n",
+      "Epoch: 83, Loss: 3.4873\n",
+      "Epoch: 84, Loss: 3.4424\n",
+      "Epoch: 85, Loss: 3.4047\n",
+      "Epoch: 86, Loss: 3.4148\n",
+      "Epoch: 87, Loss: 3.4223\n",
+      "Epoch: 88, Loss: 3.4121\n",
+      "Epoch: 89, Loss: 3.4427\n",
+      "Epoch: 90, Loss: 3.3595\n",
+      "Epoch: 91, Loss: 3.3841\n",
+      "Epoch: 92, Loss: 3.3818\n",
+      "Epoch: 93, Loss: 3.3125\n",
+      "Epoch: 94, Loss: 3.3538\n",
+      "Epoch: 95, Loss: 3.3842\n",
+      "Epoch: 96, Loss: 3.3404\n",
+      "Epoch: 97, Loss: 3.3148\n",
+      "Epoch: 98, Loss: 3.3367\n",
+      "Epoch: 99, Loss: 3.3312\n"
      ]
     }
    ],
@@ -536,6 +467,7 @@
     "\n",
     "    loss, grads = value_and_grad(loss_fn, argnums=(0))(\n",
     "        variables, \n",
+    "        model.apply,\n",
     "        xb, \n",
     "        yb\n",
     "    )\n",
@@ -546,8 +478,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Text Generation Post-Training"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -556,9 +496,8 @@
      "text": [
       "Generated text: \n",
       "\n",
-      "P?NLp,IRUmvt&UnpeAqodwb\n",
-      "ky;JkDLORenmgrkn,Pm, owraSle-nsVit;b3k!haugy wt:!MI',\n",
-      "YLDGLnicbbunbeG'T?UvbL\n"
+      "frmIIt;DeLINCZlGHk.lxir,Uqh-3QhhSRK$'eI uxnxcUKWD3nCyVWe,cCy\n",
+      "PAgOLCwH;&B!;phtwftheD aqEtoKA$VvO:IM:s\n"
      ]
     }
    ],
@@ -566,7 +505,7 @@
     "index_seq = jnp.zeros(shape=(1,1), dtype=jnp.uint16)\n",
     "max_new_tokens = 100\n",
     "\n",
-    "generated_indices = generate(variables, index_seq, rng_key, vocab_size, 1, max_new_tokens)\n",
+    "generated_indices = generate(variables, model.apply, index_seq, rng_key, vocab_size, 1, block_size, max_new_tokens)\n",
     "generated_indices = list(np.array(generated_indices[0]))\n",
     "print(\"Generated text: \")\n",
     "print(decode(generated_indices))"
