--- a/multi-headed_self-attention.ipynb
+++ b/multi-headed_self-attention.ipynb
@@ -11,13 +11,13 @@
     "\n",
     "A multi-headed self-attention block combines multiple smaller single-headed self-attention blocks and concatenates the output of all of them. It can extract information from different representation subspaces. This enables it to capture more diverse and complex patterns in the input space, while single-headed self-attention can only focus on a single subspace at a time. \n",
     "\n",
-    "We use a head size of the single-heads that is equal to the number of embedding dimensions divided by the number of heads. This ensures that the output dimensions of the multi-headed block is the same as a single-headed block, provided that 'num_heads' can divide 'n_embed' without any remainder. For further explanation on multi-headed attention see Andrej Karpathy's video: [multi-headed self-attention](https://www.youtube.com/watch?v=kCc8FmEb1nY&t=4919s).\n",
+    "We use a head size of the single-heads that is equal to the number of embedding dimensions divided by the number of heads. This ensures that the output dimensions of the multi-headed block is the same as a single-headed block, provided that 'num_heads' can divide 'n_embed' without any remainder. For further explanation on multi-headed attention see Andrej Karpathy's video [2].\n",
     "\n",
     "\n",
     "### References:\n",
-    "- [GPT colab notebook](https://colab.research.google.com/drive/1JMLa53HDuA-i7ZBmqV7ZnA3c_fvtXnx-?usp=sharing)\n",
-    "- [Video: multi-headed self-attention](https://www.youtube.com/watch?v=kCc8FmEb1nY&t=4919s)\n",
-    "- [Attention Is All You Need](https://arxiv.org/abs/1706.03762)\n",
+    "- [1] [GPT colab notebook](https://colab.research.google.com/drive/1JMLa53HDuA-i7ZBmqV7ZnA3c_fvtXnx-?usp=sharing)\n",
+    "- [2] [Video: multi-headed self-attention](https://www.youtube.com/watch?v=kCc8FmEb1nY&t=4919s)\n",
+    "- [3] [Attention Is All You Need](https://arxiv.org/abs/1706.03762)\n",
     "\n"
    ]
   },
