--- a/scaled_self-attention.ipynb
+++ b/scaled_self-attention.ipynb
@@ -9,13 +9,13 @@
     "\n",
     "We will build an autoregressive single-headed self-attention language model for predicting the next token in a sequence of text. The shakespeare_char dataset will be used for this demonstration, which can be found in the data folder.  \n",
     "\n",
-    "In the Bigram model the raw token embedding was used to perform the prediction. In this case we will combine the token embedding with a positional embedding, then process the combined embedding through a single-headed self-attention block, which is then processed through a dense layer to get the logits used for prediction. The self-attention head mechanism is shown in the 'Self-Attention Mathematical Trick' section, further explanation can is also provided in Andrej Karpathy's video: [THE CRUX OF THE VIDEO: version 4: self-attention](https://www.youtube.com/watch?v=kCc8FmEb1nY&t=3720s).\n",
+    "In the Bigram model the raw token embedding was used to perform the prediction. In this case we will combine the token embedding with a positional embedding, then process the combined embedding through a single-headed self-attention block, which is then processed through a dense layer to get the logits used for prediction. The self-attention head mechanism is shown in the 'Self-Attention Mathematical Trick' section, further explanation can is also provided in Andrej Karpathy's video [2].\n",
     "\n",
     "\n",
     "### References:\n",
-    "- [GPT colab notebook](https://colab.research.google.com/drive/1JMLa53HDuA-i7ZBmqV7ZnA3c_fvtXnx-?usp=sharing)\n",
-    "- [Video: \"scaled\" self-attention](https://www.youtube.com/watch?v=kCc8FmEb1nY&t=4616s)\n",
-    "- [Attention Is All You Need](https://arxiv.org/abs/1706.03762)\n",
+    "- [1] [GPT colab notebook](https://colab.research.google.com/drive/1JMLa53HDuA-i7ZBmqV7ZnA3c_fvtXnx-?usp=sharing)\n",
+    "- [2] [Video: \"scaled\" self-attention](https://www.youtube.com/watch?v=kCc8FmEb1nY&t=4616s)\n",
+    "- [3] [Attention Is All You Need](https://arxiv.org/abs/1706.03762)\n",
     "\n"
    ]
   },
@@ -44,9 +44,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_embed = 32\n",
-    "batch_size = 32 # how many independent sequences will we process in parallel?\n",
-    "block_size = 8 # what is the maximum context length for predictions?\n",
+    "n_embed = 32 # Number of embedding dimensions\n",
+    "batch_size = 32 # How many independent sequences will we process in parallel?\n",
+    "block_size = 8 # What is the maximum context length for predictions?\n",
     "\n",
     "rng_key = jax.random.PRNGKey(128)"
    ]
@@ -560,7 +560,7 @@
     "class AttentionLanguageModel(nn.Module):\n",
     "    \"\"\"\n",
     "    Single-headed self-attention language model.\n",
-    "    Uses the previous token in the sequence to \n",
+    "    Uses the previous tokens in the sequence to \n",
     "    determine the probabilities of the next token.\n",
     "    Processes the combined position and token embedding\n",
     "    through a self-attention decoder block, which is then\n",
