--- a/scaled_self-attention.ipynb
+++ b/scaled_self-attention.ipynb
@@ -6,10 +6,11 @@
    "metadata": {},
    "source": [
     "# Scaled Self-Attention Transformer Decoder\n",
+    "![Scaled Self-Attention](./images/scaled_self-attention.png)\n",
     "\n",
     "We will build an autoregressive single-headed self-attention language model for predicting the next token in a sequence of text. The shakespeare_char dataset will be used for this demonstration, which can be found in the data folder.  \n",
     "\n",
-    "In the Bigram model the raw token embedding was used to perform the prediction. In this case we will combine the token embedding with a positional embedding, then process the combined embedding through a single-headed self-attention block, which is then processed through a dense layer to get the logits used for prediction. The self-attention head mechanism is shown in the 'Self-Attention Mathematical Trick' section, further explanation can is also provided in Andrej Karpathy's video [2].\n",
+    "In the Bigram model the raw token embedding was used to perform the prediction. In this case we will combine the token embedding with a positional embedding, then process the combined embedding through a single-headed self-attention block, which is then processed through a dense layer to get the logits used for prediction. The scaled self-attention mechanism is performed by the query, key, and value (Q, K, V) following the operations shown in the image above. The self-attention calculations are demonstrated in the 'Self-Attention Mathematical Trick' section, further explanation is provided in Andrej Karpathy's video [2].\n",
     "\n",
     "\n",
     "### References:\n",
