--- a/multi-headed_self-attention.ipynb
+++ b/multi-headed_self-attention.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Multi-Headed Self-Attention Transformer Decoder\n",
+    "# Multi-Headed Self-Attention\n",
     "![Multi-Head Attention](./images/multi-head-attention.png)\n",
     "\n",
     "We will build an autoregressive multi-headed self-attention language model for predicting the next token in a sequence of text. The shakespeare_char dataset will be used for this demonstration, which can be found in the data folder.  \n",
