--- a/scaled_self-attention.ipynb
+++ b/scaled_self-attention.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Scaled Self-Attention Transformer Decoder\n",
+    "# Scaled Self-Attention\n",
     "![Scaled Self-Attention](./images/scaled_self-attention.png)\n",
     "\n",
     "We will build an autoregressive single-headed self-attention language model for predicting the next token in a sequence of text. The shakespeare_char dataset will be used for this demonstration, which can be found in the data folder.  \n",
