added variable head size

--- a/transformer_decoder.ipynb
+++ b/transformer_decoder.ipynb
@@ -319,9 +319,9 @@
     "        x = token_emb + pos_emb # (B, T, C)\n",
     "\n",
     "        blocks = nn.Sequential([\n",
-    "            Block(self.n_embed, num_heads=4),\n",
-    "            Block(self.n_embed, num_heads=4),\n",
-    "            Block(self.n_embed, num_heads=4),\n",
+    "            Block(self.n_embed, num_heads=self.num_heads),\n",
+    "            Block(self.n_embed, num_heads=self.num_heads),\n",
+    "            Block(self.n_embed, num_heads=self.num_heads),\n",
     "            nn.LayerNorm()\n",
     "        ])\n",
     "        x = blocks(x)\n",
