chore(requirements): added updated requirements with the latest package versions

--- a/scaled_self-attention.ipynb
+++ b/scaled_self-attention.ipynb
@@ -172,9 +172,9 @@
       " [9 9]]\n",
       "--\n",
       "c=\n",
-      "[[5.        7.       ]\n",
-      " [4.        4.5      ]\n",
-      " [5.666667  6.0000005]]\n"
+      "[[5.       7.      ]\n",
+      " [4.       4.5     ]\n",
+      " [5.666667 6.      ]]\n"
      ]
     }
    ],
@@ -238,7 +238,7 @@
     {
      "data": {
       "text/plain": [
-       "Array(True, dtype=bool)"
+       "Array(False, dtype=bool)"
       ]
      },
      "execution_count": 8,
@@ -262,7 +262,7 @@
     {
      "data": {
       "text/plain": [
-       "Array(True, dtype=bool)"
+       "Array(False, dtype=bool)"
       ]
      },
      "execution_count": 9,
@@ -337,22 +337,22 @@
     {
      "data": {
       "text/plain": [
-       "Array([[1.0000000e+00, 0.0000000e+00, 0.0000000e+00, 0.0000000e+00,\n",
-       "        0.0000000e+00, 0.0000000e+00, 0.0000000e+00, 0.0000000e+00],\n",
-       "       [8.3365250e-01, 1.6634753e-01, 0.0000000e+00, 0.0000000e+00,\n",
-       "        0.0000000e+00, 0.0000000e+00, 0.0000000e+00, 0.0000000e+00],\n",
-       "       [2.7693647e-01, 7.2302037e-01, 4.3186730e-05, 0.0000000e+00,\n",
-       "        0.0000000e+00, 0.0000000e+00, 0.0000000e+00, 0.0000000e+00],\n",
-       "       [1.3745368e-04, 5.7609759e-02, 2.2170721e-03, 9.4003570e-01,\n",
-       "        0.0000000e+00, 0.0000000e+00, 0.0000000e+00, 0.0000000e+00],\n",
-       "       [9.7506523e-01, 2.3148456e-03, 7.4237287e-03, 9.0312017e-03,\n",
-       "        6.1650318e-03, 0.0000000e+00, 0.0000000e+00, 0.0000000e+00],\n",
-       "       [1.5689149e-01, 2.0382376e-02, 2.6865533e-01, 2.7895829e-01,\n",
-       "        9.8608084e-02, 1.7650440e-01, 0.0000000e+00, 0.0000000e+00],\n",
-       "       [9.9750141e-06, 3.4491016e-04, 3.6039501e-02, 1.0690327e-01,\n",
-       "        8.4371493e-07, 2.5878797e-05, 8.5667557e-01, 0.0000000e+00],\n",
-       "       [1.2620859e-01, 6.4960361e-02, 1.4840560e-03, 1.5524941e-02,\n",
-       "        1.7746943e-01, 8.2721516e-02, 5.2967173e-01, 1.9592715e-03]],      dtype=float32)"
+       "Array([[1.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00,\n",
+       "        0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00],\n",
+       "       [8.33461225e-01, 1.66538775e-01, 0.00000000e+00, 0.00000000e+00,\n",
+       "        0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00],\n",
+       "       [2.76688129e-01, 7.23268688e-01, 4.31285771e-05, 0.00000000e+00,\n",
+       "        0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00],\n",
+       "       [1.37529642e-04, 5.75994551e-02, 2.21445272e-03, 9.40048575e-01,\n",
+       "        0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00],\n",
+       "       [9.75088000e-01, 2.30976357e-03, 7.40782032e-03, 9.04664863e-03,\n",
+       "        6.14777999e-03, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00],\n",
+       "       [1.56824246e-01, 2.03496646e-02, 2.68664807e-01, 2.79268891e-01,\n",
+       "        9.86332148e-02, 1.76259160e-01, 0.00000000e+00, 0.00000000e+00],\n",
+       "       [9.98549058e-06, 3.44379892e-04, 3.59455422e-02, 1.06993206e-01,\n",
+       "        8.42445900e-07, 2.58754826e-05, 8.56680214e-01, 0.00000000e+00],\n",
+       "       [1.26358882e-01, 6.49417490e-02, 1.48468302e-03, 1.55536355e-02,\n",
+       "        1.76991910e-01, 8.28976035e-02, 5.29809594e-01, 1.96190202e-03]],      dtype=float32)"
       ]
      },
      "execution_count": 11,
@@ -514,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -554,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -598,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -609,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -635,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -669,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -679,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -690,7 +690,7 @@
       "Epoch: 1, Loss: 4.1357\n",
       "Epoch: 2, Loss: 4.1036\n",
       "Epoch: 3, Loss: 4.0445\n",
-      "Epoch: 4, Loss: 3.9720\n",
+      "Epoch: 4, Loss: 3.9719\n",
       "Epoch: 5, Loss: 3.9320\n",
       "Epoch: 6, Loss: 3.8340\n",
       "Epoch: 7, Loss: 3.7325\n",
@@ -724,7 +724,7 @@
       "Epoch: 35, Loss: 3.0092\n",
       "Epoch: 36, Loss: 3.1513\n",
       "Epoch: 37, Loss: 3.0775\n",
-      "Epoch: 38, Loss: 3.0723\n",
+      "Epoch: 38, Loss: 3.0722\n",
       "Epoch: 39, Loss: 3.0594\n",
       "Epoch: 40, Loss: 3.3393\n",
       "Epoch: 41, Loss: 3.2729\n",
@@ -739,9 +739,9 @@
       "Epoch: 50, Loss: 2.9626\n",
       "Epoch: 51, Loss: 2.9266\n",
       "Epoch: 52, Loss: 2.9982\n",
-      "Epoch: 53, Loss: 2.9798\n",
+      "Epoch: 53, Loss: 2.9797\n",
       "Epoch: 54, Loss: 2.9792\n",
-      "Epoch: 55, Loss: 2.8609\n",
+      "Epoch: 55, Loss: 2.8610\n",
       "Epoch: 56, Loss: 2.7133\n",
       "Epoch: 57, Loss: 2.8850\n",
       "Epoch: 58, Loss: 2.9150\n",
@@ -749,12 +749,12 @@
       "Epoch: 60, Loss: 2.7939\n",
       "Epoch: 61, Loss: 2.9564\n",
       "Epoch: 62, Loss: 2.6885\n",
-      "Epoch: 63, Loss: 2.9355\n",
-      "Epoch: 64, Loss: 2.7544\n",
+      "Epoch: 63, Loss: 2.9356\n",
+      "Epoch: 64, Loss: 2.7545\n",
       "Epoch: 65, Loss: 2.6792\n",
-      "Epoch: 66, Loss: 2.7480\n",
+      "Epoch: 66, Loss: 2.7479\n",
       "Epoch: 67, Loss: 2.7320\n",
-      "Epoch: 68, Loss: 2.6350\n",
+      "Epoch: 68, Loss: 2.6351\n",
       "Epoch: 69, Loss: 2.9241\n",
       "Epoch: 70, Loss: 2.8060\n",
       "Epoch: 71, Loss: 2.6282\n",
@@ -772,19 +772,19 @@
       "Epoch: 83, Loss: 2.7719\n",
       "Epoch: 84, Loss: 2.9223\n",
       "Epoch: 85, Loss: 2.6682\n",
-      "Epoch: 86, Loss: 2.8670\n",
+      "Epoch: 86, Loss: 2.8671\n",
       "Epoch: 87, Loss: 2.7461\n",
       "Epoch: 88, Loss: 2.6462\n",
       "Epoch: 89, Loss: 2.7124\n",
       "Epoch: 90, Loss: 2.7848\n",
       "Epoch: 91, Loss: 2.7165\n",
-      "Epoch: 92, Loss: 2.6420\n",
-      "Epoch: 93, Loss: 2.7257\n",
+      "Epoch: 92, Loss: 2.6421\n",
+      "Epoch: 93, Loss: 2.7256\n",
       "Epoch: 94, Loss: 2.7709\n",
       "Epoch: 95, Loss: 2.7682\n",
       "Epoch: 96, Loss: 2.6839\n",
       "Epoch: 97, Loss: 2.6401\n",
-      "Epoch: 98, Loss: 2.5804\n",
+      "Epoch: 98, Loss: 2.5805\n",
       "Epoch: 99, Loss: 2.7055\n"
      ]
     }
@@ -818,7 +818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -828,12 +828,9 @@
       "Generated text: \n",
       "\n",
       "ag, g hart,\n",
-      "T:\n",
-      "llo nth anotd, I pe uusurkde,\n",
-      "TOurnm, by\n",
-      "J\n",
-      "O faul?\n",
-      "A bthsurthe.\n",
+      "UDruss mth,\n",
+      "Hotane are uviurken'bt y'no, by\n",
+      "LGnd ave ai'ethrurthe.\n",
       "Coetilc mun he ur, ht\n"
      ]
     }
@@ -851,7 +848,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "flax2",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -865,14 +862,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.12.3"
   },
-  "orig_nbformat": 4,
-  "vscode": {
-   "interpreter": {
-    "hash": "61a659281f728d55fc033691f61c254a0324a8156d8c726d9ae327f7f6499663"
-   }
-  }
+  "orig_nbformat": 4
  },
  "nbformat": 4,
  "nbformat_minor": 2
