--- a/bigram.ipynb
+++ b/bigram.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,14 +29,12 @@
     "import requests\n",
     "import numpy as np\n",
     "import jax\n",
-    "from jax import random\n",
     "import jax.numpy as jnp\n",
     "import flax.linen as nn\n",
     "import optax\n",
     "from jax import value_and_grad\n",
-    "from functools import partial\n",
     "\n",
-    "from helper_funcs import get_batch, generate, masked_fill, loss_fn"
+    "from helper_funcs import get_batch, generate, loss_fn"
    ]
   },
   {
@@ -380,14 +378,14 @@
       "Epoch: 23, Loss: 3.9424\n",
       "Epoch: 24, Loss: 3.9269\n",
       "Epoch: 25, Loss: 3.9313\n",
-      "Epoch: 26, Loss: 3.9342\n",
+      "Epoch: 26, Loss: 3.9343\n",
       "Epoch: 27, Loss: 3.9111\n",
       "Epoch: 28, Loss: 3.8979\n",
       "Epoch: 29, Loss: 3.8893\n",
       "Epoch: 30, Loss: 3.8613\n",
       "Epoch: 31, Loss: 3.8779\n",
       "Epoch: 32, Loss: 3.8776\n",
-      "Epoch: 33, Loss: 3.8578\n",
+      "Epoch: 33, Loss: 3.8579\n",
       "Epoch: 34, Loss: 3.8241\n",
       "Epoch: 35, Loss: 3.8421\n",
       "Epoch: 36, Loss: 3.7989\n",
@@ -514,7 +512,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "flax2",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -528,14 +526,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.12.3"
   },
-  "orig_nbformat": 4,
-  "vscode": {
-   "interpreter": {
-    "hash": "61a659281f728d55fc033691f61c254a0324a8156d8c726d9ae327f7f6499663"
-   }
-  }
+  "orig_nbformat": 4
  },
  "nbformat": 4,
  "nbformat_minor": 2
