--- a/gpt-2.ipynb
+++ b/gpt-2.ipynb
@@ -32,7 +32,6 @@
     "import requests\n",
     "import numpy as np\n",
     "import jax\n",
-    "from jax import random\n",
     "import jax.numpy as jnp\n",
     "import flax.linen as nn\n",
     "import optax\n",
@@ -81,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,14 +390,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1, 32, 65)\n"
+      "(16, 32, 65)\n"
      ]
     }
    ],
@@ -417,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -450,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -460,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -468,105 +467,105 @@
      "output_type": "stream",
      "text": [
       "Epoch: 0, Loss: 4.4984\n",
-      "Epoch: 1, Loss: 4.0247\n",
-      "Epoch: 2, Loss: 3.7785\n",
-      "Epoch: 3, Loss: 3.4819\n",
-      "Epoch: 4, Loss: 3.5813\n",
-      "Epoch: 5, Loss: 3.4390\n",
-      "Epoch: 6, Loss: 3.3522\n",
-      "Epoch: 7, Loss: 3.3741\n",
-      "Epoch: 8, Loss: 3.2018\n",
-      "Epoch: 9, Loss: 3.5234\n",
+      "Epoch: 1, Loss: 4.0242\n",
+      "Epoch: 2, Loss: 3.7783\n",
+      "Epoch: 3, Loss: 3.4816\n",
+      "Epoch: 4, Loss: 3.5812\n",
+      "Epoch: 5, Loss: 3.4388\n",
+      "Epoch: 6, Loss: 3.3521\n",
+      "Epoch: 7, Loss: 3.3740\n",
+      "Epoch: 8, Loss: 3.2019\n",
+      "Epoch: 9, Loss: 3.5237\n",
       "Epoch: 10, Loss: 3.2206\n",
       "Epoch: 11, Loss: 3.1798\n",
-      "Epoch: 12, Loss: 3.2482\n",
-      "Epoch: 13, Loss: 3.1972\n",
-      "Epoch: 14, Loss: 3.2870\n",
-      "Epoch: 15, Loss: 3.2179\n",
-      "Epoch: 16, Loss: 3.2862\n",
+      "Epoch: 12, Loss: 3.2481\n",
+      "Epoch: 13, Loss: 3.1971\n",
+      "Epoch: 14, Loss: 3.2869\n",
+      "Epoch: 15, Loss: 3.2178\n",
+      "Epoch: 16, Loss: 3.2863\n",
       "Epoch: 17, Loss: 3.3190\n",
-      "Epoch: 18, Loss: 3.3815\n",
-      "Epoch: 19, Loss: 3.3236\n",
-      "Epoch: 20, Loss: 3.2920\n",
-      "Epoch: 21, Loss: 3.1990\n",
-      "Epoch: 22, Loss: 3.3100\n",
-      "Epoch: 23, Loss: 3.2309\n",
-      "Epoch: 24, Loss: 3.3584\n",
-      "Epoch: 25, Loss: 3.2649\n",
-      "Epoch: 26, Loss: 3.1731\n",
-      "Epoch: 27, Loss: 3.1962\n",
-      "Epoch: 28, Loss: 3.4236\n",
-      "Epoch: 29, Loss: 3.1557\n",
-      "Epoch: 30, Loss: 3.2859\n",
-      "Epoch: 31, Loss: 3.1309\n",
-      "Epoch: 32, Loss: 3.1754\n",
+      "Epoch: 18, Loss: 3.3814\n",
+      "Epoch: 19, Loss: 3.3234\n",
+      "Epoch: 20, Loss: 3.2919\n",
+      "Epoch: 21, Loss: 3.1988\n",
+      "Epoch: 22, Loss: 3.3101\n",
+      "Epoch: 23, Loss: 3.2307\n",
+      "Epoch: 24, Loss: 3.3578\n",
+      "Epoch: 25, Loss: 3.2647\n",
+      "Epoch: 26, Loss: 3.1726\n",
+      "Epoch: 27, Loss: 3.1950\n",
+      "Epoch: 28, Loss: 3.4230\n",
+      "Epoch: 29, Loss: 3.1554\n",
+      "Epoch: 30, Loss: 3.2862\n",
+      "Epoch: 31, Loss: 3.1296\n",
+      "Epoch: 32, Loss: 3.1752\n",
       "Epoch: 33, Loss: 3.1635\n",
-      "Epoch: 34, Loss: 3.2867\n",
-      "Epoch: 35, Loss: 3.1182\n",
-      "Epoch: 36, Loss: 2.9672\n",
-      "Epoch: 37, Loss: 3.1443\n",
-      "Epoch: 38, Loss: 3.1414\n",
-      "Epoch: 39, Loss: 3.1504\n",
-      "Epoch: 40, Loss: 3.0108\n",
-      "Epoch: 41, Loss: 3.0403\n",
-      "Epoch: 42, Loss: 2.9964\n",
-      "Epoch: 43, Loss: 3.0329\n",
-      "Epoch: 44, Loss: 3.1116\n",
-      "Epoch: 45, Loss: 2.9713\n",
-      "Epoch: 46, Loss: 2.9396\n",
-      "Epoch: 47, Loss: 3.0610\n",
-      "Epoch: 48, Loss: 3.0597\n",
-      "Epoch: 49, Loss: 2.8929\n",
-      "Epoch: 50, Loss: 2.8312\n",
-      "Epoch: 51, Loss: 2.8679\n",
-      "Epoch: 52, Loss: 3.0265\n",
-      "Epoch: 53, Loss: 2.9092\n",
-      "Epoch: 54, Loss: 2.8468\n",
-      "Epoch: 55, Loss: 2.8166\n",
-      "Epoch: 56, Loss: 2.9492\n",
-      "Epoch: 57, Loss: 2.9896\n",
-      "Epoch: 58, Loss: 2.9172\n",
-      "Epoch: 59, Loss: 2.8209\n",
-      "Epoch: 60, Loss: 2.8746\n",
-      "Epoch: 61, Loss: 2.8864\n",
-      "Epoch: 62, Loss: 2.7877\n",
-      "Epoch: 63, Loss: 2.8333\n",
-      "Epoch: 64, Loss: 2.8097\n",
-      "Epoch: 65, Loss: 2.9920\n",
-      "Epoch: 66, Loss: 2.8437\n",
-      "Epoch: 67, Loss: 2.8001\n",
-      "Epoch: 68, Loss: 2.6927\n",
-      "Epoch: 69, Loss: 2.8162\n",
-      "Epoch: 70, Loss: 2.8116\n",
-      "Epoch: 71, Loss: 2.7609\n",
-      "Epoch: 72, Loss: 2.8246\n",
-      "Epoch: 73, Loss: 2.7641\n",
-      "Epoch: 74, Loss: 2.6625\n",
-      "Epoch: 75, Loss: 2.7137\n",
-      "Epoch: 76, Loss: 2.7618\n",
-      "Epoch: 77, Loss: 2.7533\n",
-      "Epoch: 78, Loss: 2.6671\n",
-      "Epoch: 79, Loss: 2.9097\n",
-      "Epoch: 80, Loss: 2.7236\n",
-      "Epoch: 81, Loss: 2.6633\n",
-      "Epoch: 82, Loss: 2.6982\n",
-      "Epoch: 83, Loss: 2.7677\n",
-      "Epoch: 84, Loss: 2.7462\n",
-      "Epoch: 85, Loss: 2.6724\n",
-      "Epoch: 86, Loss: 2.6885\n",
-      "Epoch: 87, Loss: 2.6859\n",
-      "Epoch: 88, Loss: 2.7013\n",
-      "Epoch: 89, Loss: 2.8477\n",
-      "Epoch: 90, Loss: 2.7398\n",
-      "Epoch: 91, Loss: 2.6856\n",
-      "Epoch: 92, Loss: 2.6711\n",
-      "Epoch: 93, Loss: 2.6841\n",
-      "Epoch: 94, Loss: 2.7377\n",
-      "Epoch: 95, Loss: 2.6989\n",
-      "Epoch: 96, Loss: 2.8792\n",
-      "Epoch: 97, Loss: 2.6758\n",
-      "Epoch: 98, Loss: 2.7484\n",
-      "Epoch: 99, Loss: 2.7810\n"
+      "Epoch: 34, Loss: 3.2862\n",
+      "Epoch: 35, Loss: 3.1163\n",
+      "Epoch: 36, Loss: 2.9651\n",
+      "Epoch: 37, Loss: 3.1461\n",
+      "Epoch: 38, Loss: 3.1395\n",
+      "Epoch: 39, Loss: 3.1525\n",
+      "Epoch: 40, Loss: 3.0099\n",
+      "Epoch: 41, Loss: 3.0437\n",
+      "Epoch: 42, Loss: 2.9973\n",
+      "Epoch: 43, Loss: 3.0322\n",
+      "Epoch: 44, Loss: 3.1174\n",
+      "Epoch: 45, Loss: 2.9730\n",
+      "Epoch: 46, Loss: 2.9389\n",
+      "Epoch: 47, Loss: 3.0621\n",
+      "Epoch: 48, Loss: 3.0599\n",
+      "Epoch: 49, Loss: 2.8928\n",
+      "Epoch: 50, Loss: 2.8320\n",
+      "Epoch: 51, Loss: 2.8673\n",
+      "Epoch: 52, Loss: 3.0282\n",
+      "Epoch: 53, Loss: 2.9135\n",
+      "Epoch: 54, Loss: 2.8428\n",
+      "Epoch: 55, Loss: 2.8110\n",
+      "Epoch: 56, Loss: 2.9472\n",
+      "Epoch: 57, Loss: 2.9887\n",
+      "Epoch: 58, Loss: 2.9140\n",
+      "Epoch: 59, Loss: 2.8215\n",
+      "Epoch: 60, Loss: 2.8812\n",
+      "Epoch: 61, Loss: 2.8853\n",
+      "Epoch: 62, Loss: 2.7898\n",
+      "Epoch: 63, Loss: 2.8342\n",
+      "Epoch: 64, Loss: 2.8091\n",
+      "Epoch: 65, Loss: 2.9965\n",
+      "Epoch: 66, Loss: 2.8450\n",
+      "Epoch: 67, Loss: 2.8035\n",
+      "Epoch: 68, Loss: 2.6910\n",
+      "Epoch: 69, Loss: 2.8083\n",
+      "Epoch: 70, Loss: 2.8133\n",
+      "Epoch: 71, Loss: 2.7583\n",
+      "Epoch: 72, Loss: 2.8146\n",
+      "Epoch: 73, Loss: 2.7690\n",
+      "Epoch: 74, Loss: 2.6602\n",
+      "Epoch: 75, Loss: 2.7042\n",
+      "Epoch: 76, Loss: 2.7513\n",
+      "Epoch: 77, Loss: 2.7581\n",
+      "Epoch: 78, Loss: 2.6852\n",
+      "Epoch: 79, Loss: 2.9056\n",
+      "Epoch: 80, Loss: 2.7036\n",
+      "Epoch: 81, Loss: 2.6576\n",
+      "Epoch: 82, Loss: 2.6866\n",
+      "Epoch: 83, Loss: 2.7586\n",
+      "Epoch: 84, Loss: 2.7580\n",
+      "Epoch: 85, Loss: 2.6683\n",
+      "Epoch: 86, Loss: 2.6784\n",
+      "Epoch: 87, Loss: 2.6879\n",
+      "Epoch: 88, Loss: 2.6856\n",
+      "Epoch: 89, Loss: 2.8599\n",
+      "Epoch: 90, Loss: 2.7363\n",
+      "Epoch: 91, Loss: 2.6727\n",
+      "Epoch: 92, Loss: 2.6679\n",
+      "Epoch: 93, Loss: 2.6862\n",
+      "Epoch: 94, Loss: 2.7413\n",
+      "Epoch: 95, Loss: 2.7102\n",
+      "Epoch: 96, Loss: 2.8845\n",
+      "Epoch: 97, Loss: 2.6784\n",
+      "Epoch: 98, Loss: 2.7509\n",
+      "Epoch: 99, Loss: 2.7656\n"
      ]
     }
    ],
@@ -599,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -608,7 +607,7 @@
      "text": [
       "Generated text: \n",
       "\n",
-      "Wos at arXOTerof t t\n"
+      "UWof t arand ot er t\n"
      ]
     }
    ],
@@ -625,7 +624,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "flax2",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -639,14 +638,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.12.3"
   },
-  "orig_nbformat": 4,
-  "vscode": {
-   "interpreter": {
-    "hash": "61a659281f728d55fc033691f61c254a0324a8156d8c726d9ae327f7f6499663"
-   }
-  }
+  "orig_nbformat": 4
  },
  "nbformat": 4,
  "nbformat_minor": 2
