--- a/multi-headed_self-attention.ipynb
+++ b/multi-headed_self-attention.ipynb
@@ -32,7 +32,6 @@
     "import requests\n",
     "import numpy as np\n",
     "import jax\n",
-    "from jax import random\n",
     "import jax.numpy as jnp\n",
     "import flax.linen as nn\n",
     "import optax\n",
@@ -197,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -356,104 +355,104 @@
      "output_type": "stream",
      "text": [
       "Epoch: 0, Loss: 4.2002\n",
-      "Epoch: 1, Loss: 4.1314\n",
-      "Epoch: 2, Loss: 4.0487\n",
-      "Epoch: 3, Loss: 3.9995\n",
-      "Epoch: 4, Loss: 3.9011\n",
-      "Epoch: 5, Loss: 3.7680\n",
-      "Epoch: 6, Loss: 3.6813\n",
-      "Epoch: 7, Loss: 3.5244\n",
-      "Epoch: 8, Loss: 3.4426\n",
-      "Epoch: 9, Loss: 3.4472\n",
-      "Epoch: 10, Loss: 3.4264\n",
-      "Epoch: 11, Loss: 3.4981\n",
+      "Epoch: 1, Loss: 4.1313\n",
+      "Epoch: 2, Loss: 4.0486\n",
+      "Epoch: 3, Loss: 3.9991\n",
+      "Epoch: 4, Loss: 3.9008\n",
+      "Epoch: 5, Loss: 3.7677\n",
+      "Epoch: 6, Loss: 3.6809\n",
+      "Epoch: 7, Loss: 3.5239\n",
+      "Epoch: 8, Loss: 3.4425\n",
+      "Epoch: 9, Loss: 3.4473\n",
+      "Epoch: 10, Loss: 3.4265\n",
+      "Epoch: 11, Loss: 3.4984\n",
       "Epoch: 12, Loss: 3.1786\n",
       "Epoch: 13, Loss: 3.2236\n",
       "Epoch: 14, Loss: 3.6526\n",
-      "Epoch: 15, Loss: 3.4811\n",
+      "Epoch: 15, Loss: 3.4809\n",
       "Epoch: 16, Loss: 3.3162\n",
-      "Epoch: 17, Loss: 3.2343\n",
+      "Epoch: 17, Loss: 3.2344\n",
       "Epoch: 18, Loss: 3.2692\n",
-      "Epoch: 19, Loss: 3.3367\n",
+      "Epoch: 19, Loss: 3.3366\n",
       "Epoch: 20, Loss: 3.1827\n",
-      "Epoch: 21, Loss: 3.2085\n",
-      "Epoch: 22, Loss: 3.1524\n",
+      "Epoch: 21, Loss: 3.2084\n",
+      "Epoch: 22, Loss: 3.1523\n",
       "Epoch: 23, Loss: 3.1159\n",
-      "Epoch: 24, Loss: 3.1055\n",
-      "Epoch: 25, Loss: 3.1955\n",
-      "Epoch: 26, Loss: 3.2321\n",
-      "Epoch: 27, Loss: 3.0995\n",
+      "Epoch: 24, Loss: 3.1054\n",
+      "Epoch: 25, Loss: 3.1956\n",
+      "Epoch: 26, Loss: 3.2319\n",
+      "Epoch: 27, Loss: 3.0994\n",
       "Epoch: 28, Loss: 3.1132\n",
-      "Epoch: 29, Loss: 3.1211\n",
-      "Epoch: 30, Loss: 3.1240\n",
-      "Epoch: 31, Loss: 3.1205\n",
-      "Epoch: 32, Loss: 3.0943\n",
-      "Epoch: 33, Loss: 3.0640\n",
-      "Epoch: 34, Loss: 3.0053\n",
-      "Epoch: 35, Loss: 3.0887\n",
-      "Epoch: 36, Loss: 2.9509\n",
-      "Epoch: 37, Loss: 2.9637\n",
-      "Epoch: 38, Loss: 2.8833\n",
+      "Epoch: 29, Loss: 3.1209\n",
+      "Epoch: 30, Loss: 3.1238\n",
+      "Epoch: 31, Loss: 3.1204\n",
+      "Epoch: 32, Loss: 3.0944\n",
+      "Epoch: 33, Loss: 3.0638\n",
+      "Epoch: 34, Loss: 3.0051\n",
+      "Epoch: 35, Loss: 3.0886\n",
+      "Epoch: 36, Loss: 2.9508\n",
+      "Epoch: 37, Loss: 2.9636\n",
+      "Epoch: 38, Loss: 2.8831\n",
       "Epoch: 39, Loss: 3.0016\n",
       "Epoch: 40, Loss: 2.8503\n",
-      "Epoch: 41, Loss: 3.0264\n",
-      "Epoch: 42, Loss: 2.9108\n",
-      "Epoch: 43, Loss: 2.9234\n",
-      "Epoch: 44, Loss: 2.9406\n",
-      "Epoch: 45, Loss: 3.1706\n",
-      "Epoch: 46, Loss: 3.0657\n",
-      "Epoch: 47, Loss: 2.7789\n",
-      "Epoch: 48, Loss: 2.7642\n",
-      "Epoch: 49, Loss: 3.0235\n",
-      "Epoch: 50, Loss: 2.7490\n",
-      "Epoch: 51, Loss: 2.7665\n",
-      "Epoch: 52, Loss: 2.8009\n",
-      "Epoch: 53, Loss: 2.6438\n",
-      "Epoch: 54, Loss: 2.7681\n",
-      "Epoch: 55, Loss: 2.8252\n",
-      "Epoch: 56, Loss: 2.7645\n",
-      "Epoch: 57, Loss: 2.8408\n",
-      "Epoch: 58, Loss: 2.8685\n",
+      "Epoch: 41, Loss: 3.0261\n",
+      "Epoch: 42, Loss: 2.9106\n",
+      "Epoch: 43, Loss: 2.9232\n",
+      "Epoch: 44, Loss: 2.9404\n",
+      "Epoch: 45, Loss: 3.1705\n",
+      "Epoch: 46, Loss: 3.0658\n",
+      "Epoch: 47, Loss: 2.7787\n",
+      "Epoch: 48, Loss: 2.7640\n",
+      "Epoch: 49, Loss: 3.0233\n",
+      "Epoch: 50, Loss: 2.7487\n",
+      "Epoch: 51, Loss: 2.7662\n",
+      "Epoch: 52, Loss: 2.8008\n",
+      "Epoch: 53, Loss: 2.6435\n",
+      "Epoch: 54, Loss: 2.7679\n",
+      "Epoch: 55, Loss: 2.8248\n",
+      "Epoch: 56, Loss: 2.7642\n",
+      "Epoch: 57, Loss: 2.8406\n",
+      "Epoch: 58, Loss: 2.8681\n",
       "Epoch: 59, Loss: 2.8447\n",
       "Epoch: 60, Loss: 2.7370\n",
-      "Epoch: 61, Loss: 2.6097\n",
-      "Epoch: 62, Loss: 2.7552\n",
-      "Epoch: 63, Loss: 2.7740\n",
-      "Epoch: 64, Loss: 2.8124\n",
-      "Epoch: 65, Loss: 2.6498\n",
-      "Epoch: 66, Loss: 2.8426\n",
-      "Epoch: 67, Loss: 2.6394\n",
-      "Epoch: 68, Loss: 2.7828\n",
-      "Epoch: 69, Loss: 2.6226\n",
-      "Epoch: 70, Loss: 2.5779\n",
-      "Epoch: 71, Loss: 2.5664\n",
-      "Epoch: 72, Loss: 2.6307\n",
-      "Epoch: 73, Loss: 2.5260\n",
-      "Epoch: 74, Loss: 2.7697\n",
-      "Epoch: 75, Loss: 2.6794\n",
+      "Epoch: 61, Loss: 2.6096\n",
+      "Epoch: 62, Loss: 2.7550\n",
+      "Epoch: 63, Loss: 2.7739\n",
+      "Epoch: 64, Loss: 2.8121\n",
+      "Epoch: 65, Loss: 2.6497\n",
+      "Epoch: 66, Loss: 2.8424\n",
+      "Epoch: 67, Loss: 2.6393\n",
+      "Epoch: 68, Loss: 2.7827\n",
+      "Epoch: 69, Loss: 2.6225\n",
+      "Epoch: 70, Loss: 2.5774\n",
+      "Epoch: 71, Loss: 2.5662\n",
+      "Epoch: 72, Loss: 2.6306\n",
+      "Epoch: 73, Loss: 2.5262\n",
+      "Epoch: 74, Loss: 2.7696\n",
+      "Epoch: 75, Loss: 2.6793\n",
       "Epoch: 76, Loss: 2.5365\n",
-      "Epoch: 77, Loss: 2.8592\n",
-      "Epoch: 78, Loss: 2.5805\n",
-      "Epoch: 79, Loss: 2.7155\n",
-      "Epoch: 80, Loss: 2.4368\n",
-      "Epoch: 81, Loss: 2.5010\n",
-      "Epoch: 82, Loss: 2.5617\n",
-      "Epoch: 83, Loss: 2.8457\n",
+      "Epoch: 77, Loss: 2.8589\n",
+      "Epoch: 78, Loss: 2.5804\n",
+      "Epoch: 79, Loss: 2.7154\n",
+      "Epoch: 80, Loss: 2.4365\n",
+      "Epoch: 81, Loss: 2.5011\n",
+      "Epoch: 82, Loss: 2.5616\n",
+      "Epoch: 83, Loss: 2.8454\n",
       "Epoch: 84, Loss: 2.7391\n",
-      "Epoch: 85, Loss: 2.5087\n",
-      "Epoch: 86, Loss: 2.6226\n",
-      "Epoch: 87, Loss: 2.6016\n",
+      "Epoch: 85, Loss: 2.5085\n",
+      "Epoch: 86, Loss: 2.6225\n",
+      "Epoch: 87, Loss: 2.6014\n",
       "Epoch: 88, Loss: 2.6035\n",
-      "Epoch: 89, Loss: 2.8334\n",
-      "Epoch: 90, Loss: 2.5495\n",
-      "Epoch: 91, Loss: 2.7333\n",
-      "Epoch: 92, Loss: 2.6847\n",
-      "Epoch: 93, Loss: 2.5214\n",
-      "Epoch: 94, Loss: 2.5889\n",
-      "Epoch: 95, Loss: 2.6230\n",
-      "Epoch: 96, Loss: 2.6512\n",
-      "Epoch: 97, Loss: 2.4776\n",
-      "Epoch: 98, Loss: 2.6964\n",
+      "Epoch: 89, Loss: 2.8335\n",
+      "Epoch: 90, Loss: 2.5494\n",
+      "Epoch: 91, Loss: 2.7331\n",
+      "Epoch: 92, Loss: 2.6843\n",
+      "Epoch: 93, Loss: 2.5213\n",
+      "Epoch: 94, Loss: 2.5887\n",
+      "Epoch: 95, Loss: 2.6229\n",
+      "Epoch: 96, Loss: 2.6511\n",
+      "Epoch: 97, Loss: 2.4777\n",
+      "Epoch: 98, Loss: 2.6962\n",
       "Epoch: 99, Loss: 2.6593\n"
      ]
     }
@@ -487,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -505,10 +504,13 @@
       "\n",
       "o\n",
       "L:\n",
-      "Fe've,\n",
-      ":\n",
+      "Fd weac:\n",
       "\n",
-      "Tetscshe Yfodot d muj inOt\n"
+      "Thovet.\n",
+      "\n",
+      "\n",
+      "CTHouR:\n",
+      "Mrad hat\n"
      ]
     }
    ],
@@ -525,7 +527,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "flax2",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -539,14 +541,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.12.3"
   },
-  "orig_nbformat": 4,
-  "vscode": {
-   "interpreter": {
-    "hash": "61a659281f728d55fc033691f61c254a0324a8156d8c726d9ae327f7f6499663"
-   }
-  }
+  "orig_nbformat": 4
  },
  "nbformat": 4,
  "nbformat_minor": 2
