--- a/transformer_decoder.ipynb
+++ b/transformer_decoder.ipynb
@@ -36,7 +36,6 @@
     "import requests\n",
     "import numpy as np\n",
     "import jax\n",
-    "from jax import random\n",
     "import jax.numpy as jnp\n",
     "import flax.linen as nn\n",
     "import optax\n",
@@ -161,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -345,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -371,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -380,8 +379,7 @@
      "text": [
       "Generated text: \n",
       "\n",
-      "S?OOpALTUlwv,UppXDifLwO\n",
-      "pyDLgGPOTcekewdeAOg..fwqSG\n"
+      "GdPkiWte;-gpPzhvR zA;zUEhVkElPvzSbWks3vzeg$Sdg3k:s\n"
      ]
     }
    ],
@@ -405,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,113 +413,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 0, Loss: 4.6445\n",
-      "Epoch: 1, Loss: 4.0688\n",
-      "Epoch: 2, Loss: 3.9067\n",
-      "Epoch: 3, Loss: 3.5614\n",
-      "Epoch: 4, Loss: 3.6100\n",
-      "Epoch: 5, Loss: 3.2905\n",
-      "Epoch: 6, Loss: 3.2720\n",
-      "Epoch: 7, Loss: 3.3428\n",
-      "Epoch: 8, Loss: 3.5249\n",
-      "Epoch: 9, Loss: 3.5429\n",
-      "Epoch: 10, Loss: 3.3397\n",
-      "Epoch: 11, Loss: 3.3729\n",
-      "Epoch: 12, Loss: 3.3888\n",
-      "Epoch: 13, Loss: 3.2544\n",
-      "Epoch: 14, Loss: 3.4051\n",
-      "Epoch: 15, Loss: 3.3170\n",
-      "Epoch: 16, Loss: 3.1535\n",
-      "Epoch: 17, Loss: 3.1203\n",
-      "Epoch: 18, Loss: 3.4272\n",
-      "Epoch: 19, Loss: 3.2886\n",
-      "Epoch: 20, Loss: 3.3406\n",
-      "Epoch: 21, Loss: 3.0601\n",
-      "Epoch: 22, Loss: 3.4776\n",
-      "Epoch: 23, Loss: 3.2847\n",
-      "Epoch: 24, Loss: 3.3164\n",
-      "Epoch: 25, Loss: 3.0897\n",
-      "Epoch: 26, Loss: 3.3027\n",
-      "Epoch: 27, Loss: 3.1619\n",
-      "Epoch: 28, Loss: 3.0401\n",
-      "Epoch: 29, Loss: 3.0141\n",
-      "Epoch: 30, Loss: 3.0968\n",
-      "Epoch: 31, Loss: 3.0341\n",
-      "Epoch: 32, Loss: 3.0852\n",
-      "Epoch: 33, Loss: 3.0117\n",
-      "Epoch: 34, Loss: 2.9093\n",
-      "Epoch: 35, Loss: 3.1125\n",
-      "Epoch: 36, Loss: 3.0681\n",
-      "Epoch: 37, Loss: 3.0834\n",
-      "Epoch: 38, Loss: 2.9816\n",
-      "Epoch: 39, Loss: 2.8643\n",
-      "Epoch: 40, Loss: 2.9614\n",
-      "Epoch: 41, Loss: 2.9554\n",
-      "Epoch: 42, Loss: 2.8890\n",
-      "Epoch: 43, Loss: 2.8504\n",
-      "Epoch: 44, Loss: 2.9558\n",
-      "Epoch: 45, Loss: 2.7900\n",
-      "Epoch: 46, Loss: 2.8974\n",
-      "Epoch: 47, Loss: 2.7046\n",
-      "Epoch: 48, Loss: 2.7988\n",
-      "Epoch: 49, Loss: 2.8923\n",
-      "Epoch: 50, Loss: 2.8348\n",
-      "Epoch: 51, Loss: 2.7146\n",
-      "Epoch: 52, Loss: 2.7739\n",
-      "Epoch: 53, Loss: 2.8796\n",
-      "Epoch: 54, Loss: 2.7500\n",
-      "Epoch: 55, Loss: 2.8143\n",
-      "Epoch: 56, Loss: 2.8804\n",
-      "Epoch: 57, Loss: 2.6704\n",
-      "Epoch: 58, Loss: 2.7254\n",
-      "Epoch: 59, Loss: 2.6350\n",
-      "Epoch: 60, Loss: 2.7621\n",
-      "Epoch: 61, Loss: 2.6556\n",
-      "Epoch: 62, Loss: 2.8429\n",
-      "Epoch: 63, Loss: 2.5443\n",
-      "Epoch: 64, Loss: 2.9188\n",
-      "Epoch: 65, Loss: 2.6598\n",
-      "Epoch: 66, Loss: 2.7448\n",
-      "Epoch: 67, Loss: 2.7239\n",
-      "Epoch: 68, Loss: 2.6892\n",
-      "Epoch: 69, Loss: 2.6269\n",
-      "Epoch: 70, Loss: 2.6217\n",
-      "Epoch: 71, Loss: 2.7326\n",
-      "Epoch: 72, Loss: 2.5855\n",
-      "Epoch: 73, Loss: 2.7561\n",
-      "Epoch: 74, Loss: 2.6564\n",
-      "Epoch: 75, Loss: 2.7183\n",
-      "Epoch: 76, Loss: 2.7196\n",
-      "Epoch: 77, Loss: 2.7120\n",
-      "Epoch: 78, Loss: 2.6052\n",
-      "Epoch: 79, Loss: 2.7030\n",
-      "Epoch: 80, Loss: 2.7663\n",
-      "Epoch: 81, Loss: 2.7536\n",
-      "Epoch: 82, Loss: 2.5438\n",
-      "Epoch: 83, Loss: 2.7471\n",
-      "Epoch: 84, Loss: 2.6769\n",
-      "Epoch: 85, Loss: 2.5251\n",
-      "Epoch: 86, Loss: 2.6146\n",
-      "Epoch: 87, Loss: 2.6125\n",
-      "Epoch: 88, Loss: 2.6551\n",
-      "Epoch: 89, Loss: 2.6551\n",
-      "Epoch: 90, Loss: 2.5432\n",
-      "Epoch: 91, Loss: 2.5037\n",
-      "Epoch: 92, Loss: 2.6880\n",
-      "Epoch: 93, Loss: 2.5105\n",
-      "Epoch: 94, Loss: 2.4815\n",
-      "Epoch: 95, Loss: 2.7105\n",
-      "Epoch: 96, Loss: 2.6154\n",
-      "Epoch: 97, Loss: 2.6201\n",
-      "Epoch: 98, Loss: 2.6530\n",
-      "Epoch: 99, Loss: 2.5556\n"
+      "Epoch: 0, Loss: 4.6198\n",
+      "Epoch: 1, Loss: 4.2264\n",
+      "Epoch: 2, Loss: 3.6980\n",
+      "Epoch: 3, Loss: 3.5706\n",
+      "Epoch: 4, Loss: 3.6013\n",
+      "Epoch: 5, Loss: 3.3840\n",
+      "Epoch: 6, Loss: 3.3821\n",
+      "Epoch: 7, Loss: 3.2056\n",
+      "Epoch: 8, Loss: 3.2752\n",
+      "Epoch: 9, Loss: 3.3728\n",
+      "Epoch: 10, Loss: 3.3380\n",
+      "Epoch: 11, Loss: 3.4187\n",
+      "Epoch: 12, Loss: 3.1114\n",
+      "Epoch: 13, Loss: 3.1586\n",
+      "Epoch: 14, Loss: 3.6710\n",
+      "Epoch: 15, Loss: 3.5170\n",
+      "Epoch: 16, Loss: 3.3354\n",
+      "Epoch: 17, Loss: 3.2102\n",
+      "Epoch: 18, Loss: 3.1993\n",
+      "Epoch: 19, Loss: 3.3897\n",
+      "Epoch: 20, Loss: 3.2154\n",
+      "Epoch: 21, Loss: 3.1864\n",
+      "Epoch: 22, Loss: 3.1117\n",
+      "Epoch: 23, Loss: 3.1442\n",
+      "Epoch: 24, Loss: 3.0538\n",
+      "Epoch: 25, Loss: 3.1941\n",
+      "Epoch: 26, Loss: 3.2109\n",
+      "Epoch: 27, Loss: 3.0869\n",
+      "Epoch: 28, Loss: 3.1904\n",
+      "Epoch: 29, Loss: 3.1063\n",
+      "Epoch: 30, Loss: 3.1947\n",
+      "Epoch: 31, Loss: 3.2487\n",
+      "Epoch: 32, Loss: 3.1228\n",
+      "Epoch: 33, Loss: 3.0457\n",
+      "Epoch: 34, Loss: 3.0480\n",
+      "Epoch: 35, Loss: 3.0954\n",
+      "Epoch: 36, Loss: 2.9428\n",
+      "Epoch: 37, Loss: 2.9732\n",
+      "Epoch: 38, Loss: 2.9597\n",
+      "Epoch: 39, Loss: 3.0434\n",
+      "Epoch: 40, Loss: 2.8481\n",
+      "Epoch: 41, Loss: 2.9712\n",
+      "Epoch: 42, Loss: 3.0033\n",
+      "Epoch: 43, Loss: 2.9335\n",
+      "Epoch: 44, Loss: 2.9867\n",
+      "Epoch: 45, Loss: 3.3182\n",
+      "Epoch: 46, Loss: 3.1432\n",
+      "Epoch: 47, Loss: 2.8075\n",
+      "Epoch: 48, Loss: 2.8615\n",
+      "Epoch: 49, Loss: 3.1502\n",
+      "Epoch: 50, Loss: 2.8608\n",
+      "Epoch: 51, Loss: 2.9046\n",
+      "Epoch: 52, Loss: 2.8904\n",
+      "Epoch: 53, Loss: 2.7666\n",
+      "Epoch: 54, Loss: 2.8829\n",
+      "Epoch: 55, Loss: 2.8673\n",
+      "Epoch: 56, Loss: 2.8579\n",
+      "Epoch: 57, Loss: 2.8610\n",
+      "Epoch: 58, Loss: 2.8795\n",
+      "Epoch: 59, Loss: 2.9398\n",
+      "Epoch: 60, Loss: 2.8480\n",
+      "Epoch: 61, Loss: 2.7014\n",
+      "Epoch: 62, Loss: 2.8627\n",
+      "Epoch: 63, Loss: 2.7842\n",
+      "Epoch: 64, Loss: 2.9687\n",
+      "Epoch: 65, Loss: 2.7167\n",
+      "Epoch: 66, Loss: 2.9327\n",
+      "Epoch: 67, Loss: 2.6728\n",
+      "Epoch: 68, Loss: 2.7890\n",
+      "Epoch: 69, Loss: 2.6587\n",
+      "Epoch: 70, Loss: 2.6515\n",
+      "Epoch: 71, Loss: 2.6870\n",
+      "Epoch: 72, Loss: 2.6874\n",
+      "Epoch: 73, Loss: 2.5787\n",
+      "Epoch: 74, Loss: 2.8392\n",
+      "Epoch: 75, Loss: 2.7139\n",
+      "Epoch: 76, Loss: 2.6013\n",
+      "Epoch: 77, Loss: 2.8684\n",
+      "Epoch: 78, Loss: 2.6029\n",
+      "Epoch: 79, Loss: 2.7861\n",
+      "Epoch: 80, Loss: 2.5331\n",
+      "Epoch: 81, Loss: 2.5486\n",
+      "Epoch: 82, Loss: 2.6647\n",
+      "Epoch: 83, Loss: 2.8498\n",
+      "Epoch: 84, Loss: 2.7732\n",
+      "Epoch: 85, Loss: 2.5246\n",
+      "Epoch: 86, Loss: 2.6781\n",
+      "Epoch: 87, Loss: 2.6529\n",
+      "Epoch: 88, Loss: 2.7233\n",
+      "Epoch: 89, Loss: 2.9014\n",
+      "Epoch: 90, Loss: 2.5716\n",
+      "Epoch: 91, Loss: 2.7425\n",
+      "Epoch: 92, Loss: 2.6585\n",
+      "Epoch: 93, Loss: 2.6008\n",
+      "Epoch: 94, Loss: 2.6931\n",
+      "Epoch: 95, Loss: 2.7012\n",
+      "Epoch: 96, Loss: 2.7106\n",
+      "Epoch: 97, Loss: 2.6079\n",
+      "Epoch: 98, Loss: 2.6693\n",
+      "Epoch: 99, Loss: 2.7242\n"
      ]
     }
    ],
@@ -554,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -563,9 +561,11 @@
      "text": [
       "Generated text: \n",
       "\n",
-      "U& Ho' mint theru fe tho:\n",
-      "OWer yap.\n",
-      "Fo' y.W nard l\n"
+      "Sou,\n",
+      "ic;\n",
+      "EEI mod satthiceth anot.\n",
+      " HAfaatthth,\n",
+      "NCB\n"
      ]
     }
    ],
@@ -582,7 +582,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "flax2",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -596,14 +596,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.12.3"
   },
-  "orig_nbformat": 4,
-  "vscode": {
-   "interpreter": {
-    "hash": "61a659281f728d55fc033691f61c254a0324a8156d8c726d9ae327f7f6499663"
-   }
-  }
+  "orig_nbformat": 4
  },
  "nbformat": 4,
  "nbformat_minor": 2
